[KARAF-5448] Fix java 9 warning for TCPEndpoint access